# MessageCalimero

./: .gitignore  Cargo.toml  build.sh
res/: cal_lock.js  cal_lock.wasm  cal_lock_bg.wasm.d.ts  research.wasm
src/: lib.rs
tests/: chat_test.rs
