[package]
name = "cal_lock"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
calimero-sdk = { git = "https://github.com/calimero-network/core", branch = "master" }
chrono = "0.4"
wasm-bindgen = "0.2"



[profile.app-release]
inherits = "release"
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true